--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+/* custom styles */
+.gradient {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(to bottom left, #b309aa 20%, #da8619 80%);
+  background-size: 200% 200%;
+  animation: gradient 15s ease infinite;
+}
+.outer {
+  display: table;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
+  width: 350px;
+  height: 350px;
+  border: 1px solid #fff;
+  /* Whatever width you want */
+}
