--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 /* custom styles */
 .gradient {
   width: 100vw;
@@ -60,10 +21,18 @@
 }
 
 .inner {
-  margin-left: auto;
-  margin-right: auto;
-  width: 350px;
-  height: 350px;
+  margin: auto;
+  padding: 1em;
+}
+.main {
   border: 1px solid #fff;
-  /* Whatever width you want */
+  max-width: 500px;
+  border-radius: 3px;
+  background-color: #fff;
+  text-align: center;
+}
+p {
+  font-size: xx-small;
+  color: rgb(184, 38, 38);
+  margin: 0;
 }
